--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,129 +1,78 @@
-.container {
-  padding: 0 2rem;
-}
-
-.main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer {
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-}
-
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
-}
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
-}
-
-@media (max-width: 600px) {
-  .grid {
+.mainIntro{
+    background-image: url("../public/images/clo.jpg");
+    background-size: cover;
+    background-position: center; 
+    height: 93vh;
     width: 100%;
-    flex-direction: column;
-  }
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+.introContent{
+    min-width: 50%;
+    max-width: 80%;
+    margin: auto;
+    text-align: center;
+    line-height: 2rem;
+    padding: 20px;
+    background-color: rgba(245, 246, 247, 0.4);
+      backdrop-filter: blur(5px);
+    
 }
 
-@media (prefers-color-scheme: dark) {
-  .card,
-  .footer {
-    border-color: #222;
-  }
-  .code {
-    background: #111;
-  }
-  .logo img {
-    filter: invert(1);
-  }
+
+.gridContainer{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(210px,1fr));
+    gap: 15px;
+    padding: 20px;
+    width: 90%;
+    margin: auto;
+}
+.title{
+    width: 100%;
+ 
+}
+.sectionTitle{
+    padding: 5px 0;
+    margin: auto;
+    position: relative;
+    color: var(--dark-blue);
+    width: fit-content;
+}
+.sectionTitle::after{
+     content: "";
+  position: absolute;
+  top: 50%;
+ 
+  right: 0;
+   left: 103%;
+  display: block;
+  width: 10%;
+
+  height: 2px;
+  background-color:var(--dark-blue);
+  
+}
+.sectionTitle::before{
+     content: "";
+  position: absolute;
+  top: 50%;
+  left: -13%;
+  right: 0;
+  display: block;
+  width: 10%;
+  height: 2px;
+  background-color:var(--dark-blue);
+  
+}
+.categories{
+    margin: 10px auto;
+     margin-top:30px;
+    
+    width: fit-content;
+}
+.categories button{
+   margin:0 5px;
 }
