--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,28 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+ font-family: 'Poppins', sans-serif;
+ 
+}
+.testTitle{
+   
+ padding: 5px;
+ padding-top: 0;
+    text-align: center;
+    position: relative;
+}
+.testTitle::after{
+     content: "";
+  position: absolute;
+  top: 100%;
+  left: 0;
+  right: 0;
+  display: block;
+  width: 10%;
+  margin: auto;
+  height: 2px;
+  background-color: var(--light-blue);
+  
 }
 
 a {
@@ -14,6 +34,9 @@ a {
 * {
   box-sizing: border-box;
 }
+html {
+  scroll-behavior: smooth;
+}
 
 @media (prefers-color-scheme: dark) {
   html {
@@ -22,5 +45,7 @@ a {
   body {
     color: white;
     background: black;
+    
+   
   }
 }
